[gd_scene load_steps=4 format=3 uid="uid://matxvjtdly44"]

[ext_resource type="Script" uid="uid://ct060ci3lqini" path="res://Todo/Scripts/todo_item.gd" id="1_e7wog"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_a8dcq"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5ux3n"]
bg_color = Color(0.760784, 0.760784, 0.760784, 0.615686)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20
corner_detail = 4
anti_aliasing = false

[node name="TodoItem" type="PanelContainer"]
anchors_preset = -1
anchor_right = 0.174
anchor_bottom = 0.08
offset_right = 118.552
offset_bottom = 0.159996
script = ExtResource("1_e7wog")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10
metadata/_edit_lock_ = true

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Control" type="Control" parent="MarginContainer/HBoxContainer"]
clip_contents = true
layout_mode = 2
size_flags_horizontal = 3

[node name="indicator" type="Button" parent="MarginContainer/HBoxContainer/Control"]
custom_minimum_size = Vector2(30, 32)
layout_mode = 2
offset_right = 30.0
offset_bottom = 32.0
size_flags_horizontal = 4
focus_mode = 0

[node name="task" type="Label" parent="MarginContainer/HBoxContainer/Control"]
layout_mode = 2
offset_left = 40.0
offset_top = 4.0
offset_right = 41.0
offset_bottom = 27.0
size_flags_horizontal = 3
text = "This is a todo item"

[node name="ProgressBar" type="ProgressBar" parent="MarginContainer/HBoxContainer/Control/task"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 10.0
offset_bottom = -10.76
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/background = SubResource("StyleBoxEmpty_a8dcq")
theme_override_styles/fill = SubResource("StyleBoxFlat_5ux3n")
value = 41.8
show_percentage = false

[node name="Delete" type="Button" parent="MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(30, 32)
layout_mode = 2
size_flags_horizontal = 8
text = "-"

[connection signal="pressed" from="MarginContainer/HBoxContainer/Control/indicator" to="." method="_on_indicator_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/Delete" to="." method="_on_delete_pressed"]
